--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,13 +14,13 @@
     <string name="private_string">Private</string>
     <string name="deleted">Deleted</string>
     <string name="other">Other</string>
-    <string name="account_settings">Account Settings</string>
+    <string name="settings">Settings</string>
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
 
     <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
+    <string name="theme">Theme</string>
     <string name="reply_title">Default reply action</string>
 
     <!-- Sync Preferences -->
@@ -35,4 +35,11 @@
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
     <string name="trash">Trash</string>
+    <string name="date">Date</string>
+
+    <string name="themeKey" translatable="false">theme</string>
+    <string name="light" translatable="false">light</string>
+    <string name="dark" translatable="false">dark</string>
+    <string name="black" translatable="false">black</string>
+    <string name="follow_system" translatable="false">follow_system</string>
 </resources>
